fix: :fire: remoção do pattern nos modos de fazer e reestilização de button

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -3,15 +3,15 @@
   width: 100%;
   text-align: center;
   padding: 0.5rem;
-  margin-top: 0.5rem;
+  margin: .5rem 0;
+  border: solid 1px #054f77;
+  border-radius: 5px;
 }
 .principalForm form > fieldset {
   display: flex;
-  padding: 0.5rem;
   width: 100%;
 }
 .principalForm form > fieldset > label {
-  margin-top: 0.5rem;
   padding: 0.5rem;
   line-height: 2rem;
   width: 100%;
@@ -20,7 +20,7 @@
   box-shadow: 0px 0px 5px 0px rgba(100, 100, 100, 0.75);
   padding-left: 0.5rem;
   border-radius: 5px;
-  line-height: 3rem;
+  height: 2.5rem;
   width: 100%;
 }
 .principalForm form > fieldset > button {
@@ -43,23 +43,33 @@
   color: #f0f0f0;
   padding: 0 1rem;
   margin: 0.5rem auto;
+  margin-bottom: 1rem;
 }
 
 /* ---------------------------- fieldsetBotoes */
 .fieldsetBotoes {
-  justify-content: center;
+  justify-content: space-around;
   gap: 40px;
   margin: 2rem 0;
+  padding: 10px;
 }
 .fieldsetBotoes button {
-  padding: 0.3rem 1rem;
+  padding: 0.3rem;
+  width: 30%;
   font-weight: 700;
+  transition: .5s;
+}
+.fieldsetBotoes button:hover {
+  transform: scale(1.1);
 }
 .botaoLimpar {
-  background-color: #ee7777;
+  border: solid 1px #d12c38;
+  color: #d12c38;
 }
 .botaoSalvar {
-  background-color: #88ee77;
+  background-color: #23cf5c;
+  border: solid 1px #23cf5c;
+  color: #f0f0f0;
 }
 
 /* ---------------------------- Mobile */
