--- a/src/css/inicialESobre.css
+++ b/src/css/inicialESobre.css
@@ -5,21 +5,12 @@
   text-align: justify;
   margin-bottom: 3rem;
 }
-.prinicipalIndex p,
-.prinicipalAbout p {
-  text-indent: 1rem;
-}
-/* ---------------------------- Detalhes do Index*/
-.prinicipalIndex p > a{
-  color: #054f77;
-  font-weight: 700;
-}
-.prinicipalIndex .titulo {
+.prinicipalIndex .titulo,
+.prinicipalAbout .tituloExemplo {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: .5rem 0;
-  height: 300px;
   border-radius: 5px;
   background-image: url("../img/bannerIndex.jpg");
   background-color: #91daed;
@@ -27,17 +18,40 @@
   background-size: contain;
   background-position: right;
 }
-/* ---------------------------- Detalhes do About*/
-.prinicipalAbout ol {
-  padding-left: 1rem;
+/* ---------------------------- Detalhes do Index*/
+.prinicipalIndex .titulo{
+  height: 300px;
+}
+.prinicipalIndex p {
   text-indent: 1rem;
+}
+.prinicipalIndex p > a{
+  color: #054f77;
+  font-weight: 700;
+}
+
+/* ---------------------------- Detalhes do About*/
+.quote{
+  color: #054f77;
+  text-align: center;
+}
+.prinicipalAbout ol,
+.prinicipalAbout ul {
+  padding-left: 1rem;
+}
+.prinicipalAbout ol > li {
+  list-style: decimal;
+  margin-bottom: .5rem;
+}
+.prinicipalAbout ul > li {
+  list-style: circle;
 }
 .prinicipalAbout li > h4 {
   margin-top: .5rem;
   line-height: 1.5rem;
 }
-.prinicipalAbout li > p {
-  padding-left: 1.5rem;
+.tituloExemplo {
+  height: 70px;
 }
 
 /* ---------------------------- Mobile */
