fix: :bug: reestruturação do header

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -71,6 +71,9 @@
   border: solid 1px #23cf5c;
   color: #f0f0f0;
 }
+.botaoTeste {
+  border: solid 1px #d1bb2c;
+}
 
 /* ---------------------------- Mobile */
 
